WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159862
[JSC] Should check Test262Error correctly
https://bugs.webkit.org/show_bug.cgi?id=159862
Summary
[JSC] Should check Test262Error correctly
Yusuke Suzuki
Reported
2016-07-17 08:57:51 PDT
Currently, Test262Error does not have this.name. So `--exception=Test262Error` does not work.
Attachments
Patch
(7.26 KB, patch)
2016-07-28 12:01 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(8.18 KB, patch)
2016-07-29 01:20 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2016-07-17 09:06:32 PDT
https://github.com/tc39/test262/pull/730
Yusuke Suzuki
Comment 2
2016-07-28 12:00:11 PDT
Maybe, performing instanceof is better.
Yusuke Suzuki
Comment 3
2016-07-28 12:01:28 PDT
Created
attachment 284802
[details]
Patch
Darin Adler
Comment 4
2016-07-28 15:59:44 PDT
Comment on
attachment 284802
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=284802&action=review
> Source/JavaScriptCore/jsc.cpp:2055 > + bool isInstanceOfExpectedException = jsCast<JSObject*>(exceptionClass)->hasInstance(exec, exception);
Need to export JSObject::hasInstance to avoid the compilation error.
Yusuke Suzuki
Comment 5
2016-07-29 01:18:19 PDT
Comment on
attachment 284802
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=284802&action=review
Thanks
>> Source/JavaScriptCore/jsc.cpp:2055 >> + bool isInstanceOfExpectedException = jsCast<JSObject*>(exceptionClass)->hasInstance(exec, exception); > > Need to export JSObject::hasInstance to avoid the compilation error.
Oops, I'll add JS_EXPORT_PRIVATE.
Yusuke Suzuki
Comment 6
2016-07-29 01:20:07 PDT
Created
attachment 284852
[details]
Patch
Yusuke Suzuki
Comment 7
2016-07-31 05:26:30 PDT
ping? :)
Yusuke Suzuki
Comment 8
2016-07-31 17:17:02 PDT
Comment on
attachment 284852
[details]
Patch Thanks :)
WebKit Commit Bot
Comment 9
2016-07-31 17:38:32 PDT
Comment on
attachment 284852
[details]
Patch Clearing flags on attachment: 284852 Committed
r203957
: <
http://trac.webkit.org/changeset/203957
>
WebKit Commit Bot
Comment 10
2016-07-31 17:38:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug