[JSC] Should check Test262Error correctly https://bugs.webkit.org/show_bug.cgi?id=159862

Reviewed by Saam Barati.

Test262Error in the harness does not have "name" property.
Rather than checking "name" property, peforming `instanceof` is better to check the class of the exception.

* jsc.cpp:
(checkUncaughtException):
* runtime/JSObject.h:
* tests/test262.yaml:


Canonical link: https://commits.webkit.org/178540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203957 268f45cc-cd09-0410-ab3c-d52691b4dbfc